# blog-template

./: pyproject.toml  requirements.txt
config/: asgi.py
config/settings/: base.py
