[tool.poetry]
name = "repl_nix_blog-template"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
python-decouple = "^3.8"
Django = "^4.2"
base = "^1.0.4"
channels = "^4.0.0"
six = "^1.16.0"
django-tailwind = "3.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
